Enable Zip Unpacker extension when it were disabled.

Component extension cannot be disabled or uninstalled by any user
operations, but we got some cases where Zip Unpacker was disabled
in some user's profile.

Bug: 643060
Test: unit_tests --gtest_filter=ExtensionServiceTest.*
Change-Id: Id27ca4472270d37175dd21b54f070c37b2c6f282
Reviewed-on: https://chromium-review.googlesource.com/737892
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Commit-Queue: Tatsuhisa Yamaguchi <yamaguchi@chromium.org>
Cr-Commit-Position: refs/heads/master@{#511780}
Former-commit-id: 5ed1aece396a2398fda2bfb4546f7c788083b33b