chrome/browser/extensions/extension_service.h
@@ -414,6 +414,9 @@ class ExtensionService
   // Reloads all extensions. Does not notify that extensions are ready.
   void ReloadExtensionsForTest();
 
+  // Enable Zip Unpacker Extension component extensions for unit test.
+  void EnableZipUnpackerExtensionForTest();
+
   // Clear all ExternalProviders.
   void ClearProvidersForTesting();
 
@@ -484,6 +487,12 @@ class ExtensionService
   // For the extension in |version_path| with |id|, check to see if it's an
   // externally managed extension.  If so, uninstall it.
   void CheckExternalUninstall(const std::string& id);
+
+  // Attempt to enable Zip Unpacker component extension if it is disabled.
+  // This function doesn't override MUST_REAMIN_DISABLED management policy.
+  // Component extensions are managed and cannot be disabled by user, however,
+  // there are some cases having a disabled component extension in profile.
+  void EnableZipUnpackerExtension();
 
   // Attempt to enable all disabled extensions which the only disabled reason is
   // reloading.
